--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             color: #333;
             margin: 0;
             padding: 20px;
+            <img src="monstr.jpg" />
         }
         #story {
             margin-bottom: 20px;
