--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Приключения милого существа</title>
-    <img src="monstr.jpg" />
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #e8f5e9;
+            background-image: url("monstr.jpg");
             color: #333;
             margin: 0;
             padding: 20px;
