--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             background-color: #e8f5e9;
             background-image: url("monstr.jpg");
-            color: #333;
+            color: #ffff99;
             margin: 0;
             padding: 20px;
         }
